2025-11-12 version 2025c
- new (block) command, "gibbs", implements the Gibbs sampler
- "append" command: tighten the restriction on appending to
  a panel dataset, to avoid spurious results
- "dataset compact": support hourly to daily compaction via
  the command line (was already supported via the GUI)
- "store" command: enable saving of user-defined functions
  to file in XML format
- "corrgm" command: clarify the status of Barlett standard
  errors for the ACF
- "omit" command: extend the --auto option to support use of
  information criteria
- "delete" command: ensure that an informative message is
  shown when some series cannot be deleted
- "join" command: fix handling of problematic CSV files
- "setobs" syntax: accept month as a single digit for panel
  data with monthly time dimension
- "nulldata" command: ensure that all pre-existing dataset
  information is cleared out
- distance() function: treat the Mahalanobis metric in the
  same way as all the other supported metrics
- new function lnmgamma(): multivariate log gamma function
- slight speedup for forward stepwise regression code
- command-line syntax: accept trailing ';' as calling for
  line continuation (except in the "smpl" command)
- function packages: add apparatus to specify that the
  return value of a given public function must be assigned,
  in GUI usage; also provide a mechanism to automate the
  specification of an assignment name.
- printing of a bundle with the --tree option: clarify the
  structure of the bundle
- Fix bug: restore the "savename <- gnuplot ..." syntax,
  which had got broken
- Fix bug: potential crash in GTK file chooser dialog
- Fix bug: incorrect Bartlett band in ACF + PACF plot
- Fix bug: memory leak in some cases of loop code
- Fix bug: possible spurious error from "smpl" command
- Fix bug: a series could be wrongly taken to be a lag of
  another series
- Fix bug: decimal comma creeping into the representation
  of models stored in a gretl session file