@@ -1,3 +1,8 @@
+version 2026a, in progress
+
+- mat2list(): fix potential crashing bug; enhance by using
+  the t1 and t2 values on the matrix argument, if present
+
 2025-11-12 version 2025c
 - new (block) command, "gibbs", implements the Gibbs sampler
 - "append" command: tighten the restriction on appending to
